--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,7 @@ dependencies {
   implementation "com.google.android.material:material:${versions.material}"
   implementation "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}"
   implementation "com.bluelinelabs:conductor:${versions.conductor}"
+  implementation "com.bluelinelabs:conductor-androidx-transition:${versions.conductor}"
   implementation "com.jakewharton.timber:timber:${versions.timber}"
   implementation "com.jakewharton.threetenabp:threetenabp:${versions.threetenabp}"
   implementation "com.squareup.leakcanary:leakcanary-object-watcher-android:${versions.leakcanary}"
