--- a/build.gradle
+++ b/build.gradle
@@ -4,23 +4,23 @@ buildscript {
                   'android_build_tools'   : '29.0.3',
                   'android_gradle_plugin' : '4.0.0',
                   'kotlin'                : '1.3.72',
-                  'coroutines'            : '1.3.5',
+                  'coroutines'            : '1.3.7',
                   'appcompat'             : '1.1.0',
-                  'material'              : '1.2.0-alpha06',
-                  'androidx_core'         : '1.2.0',
-                  'constraintlayout'      : '2.0.0-beta4',
-                  'conductor'             : '3.0.0-rc1',
-                  'threetenabp'           : '1.2.3',
+                  'material'              : '1.2.0-beta01',
+                  'androidx_core'         : '1.3.0',
+                  'constraintlayout'      : '2.0.0-beta6',
+                  'conductor'             : '3.0.0-rc6',
+                  'threetenabp'           : '1.2.4',
                   'debugdrawer'           : '0.9.7',
                   'timber'                : '4.7.1',
                   'leakcanary'            : '2.1',
                   'moshi'                 : '1.9.2',
-                  'okhttp'                : '4.4.1',
-                  'retrofit'              : '2.7.2',
+                  'okhttp'                : '4.7.2',
+                  'retrofit'              : '2.9.0',
                   'play_services_location': '17.0.0',
                   'play_publisher'        : '2.6.1',
                   'threetenbp'            : '1.4.2',
-                  'flowbinding'           : '0.11.1',
+                  'flowbinding'           : '0.12.0',
                   'junit'                 : '4.13',
                   'truth'                 : '1.0.1']
 
