--- a/build.gradle
+++ b/build.gradle
@@ -8,19 +8,19 @@ buildscript {
                   'appcompat'             : '1.1.0',
                   'material'              : '1.2.0-beta01',
                   'androidx_core'         : '1.3.0',
-                  'constraintlayout'      : '2.0.0-beta6',
+                  'constraintlayout'      : '2.0.0-beta7',
                   'conductor'             : '3.0.0-rc6',
                   'threetenabp'           : '1.2.4',
                   'debugdrawer'           : '0.9.7',
                   'timber'                : '4.7.1',
                   'leakcanary'            : '2.1',
-                  'moshi'                 : '1.9.2',
+                  'moshi'                 : '1.9.3',
                   'okhttp'                : '4.7.2',
                   'retrofit'              : '2.9.0',
                   'play_services_location': '17.0.0',
                   'play_publisher'        : '2.6.1',
                   'threetenbp'            : '1.4.2',
-                  'flowbinding'           : '0.12.0',
+                  'flowbinding'           : '1.0.0-alpha01',
                   'junit'                 : '4.13',
                   'truth'                 : '1.0.1']
 
