--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,20 @@ buildscript {
   ext.versions = ['compile_sdk'           : 29,
                   'min_sdk'               : 23,
                   'android_build_tools'   : '29.0.3',
-                  'android_gradle_plugin' : '4.0.0',
+                  'android_gradle_plugin' : '4.0.1',
                   'kotlin'                : '1.3.72',
-                  'coroutines'            : '1.3.7',
+                  'coroutines'            : '1.3.8',
                   'appcompat'             : '1.1.0',
                   'material'              : '1.2.0-beta01',
-                  'androidx_core'         : '1.3.0',
-                  'constraintlayout'      : '2.0.0-beta7',
+                  'androidx_core'         : '1.3.1',
+                  'constraintlayout'      : '2.0.0-rc1',
                   'conductor'             : '3.0.0-rc6',
                   'threetenabp'           : '1.2.4',
                   'debugdrawer'           : '0.9.7',
                   'timber'                : '4.7.1',
                   'leakcanary'            : '2.1',
                   'moshi'                 : '1.9.3',
-                  'okhttp'                : '4.7.2',
+                  'okhttp'                : '4.8.0',
                   'retrofit'              : '2.9.0',
                   'play_services_location': '17.0.0',
                   'play_publisher'        : '2.6.1',
