--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,28 @@
 buildscript {
-  ext.versions = ['compile_sdk'           : 29,
+  ext.versions = ['compile_sdk'           : 30,
                   'min_sdk'               : 23,
-                  'android_build_tools'   : '29.0.3',
-                  'android_gradle_plugin' : '4.0.1',
-                  'kotlin'                : '1.3.72',
-                  'coroutines'            : '1.3.8',
-                  'appcompat'             : '1.1.0',
-                  'material'              : '1.2.0-beta01',
-                  'androidx_core'         : '1.3.1',
-                  'constraintlayout'      : '2.0.0-rc1',
-                  'conductor'             : '3.0.0-rc6',
-                  'threetenabp'           : '1.2.4',
+                  'android_build_tools'   : '30.0.2',
+                  'android_gradle_plugin' : '4.1.1',
+                  'kotlin'                : '1.4.20',
+                  'coroutines'            : '1.4.1',
+                  'appcompat'             : '1.3.0-alpha02',
+                  'material'              : '1.3.0-alpha03',
+                  'androidx_core'         : '1.3.2',
+                  'constraintlayout'      : '2.0.4',
+                  'conductor'             : '3.0.0',
+                  'threetenabp'           : '1.3.0',
                   'debugdrawer'           : '0.9.7',
                   'timber'                : '4.7.1',
                   'leakcanary'            : '2.1',
-                  'moshi'                 : '1.9.3',
-                  'okhttp'                : '4.8.0',
+                  'moshi'                 : '1.11.0',
+                  'okhttp'                : '4.10.0-RC1',
                   'retrofit'              : '2.9.0',
-                  'play_services_location': '17.0.0',
+                  'play_services_location': '17.1.0',
                   'play_publisher'        : '2.6.1',
-                  'threetenbp'            : '1.4.2',
-                  'flowbinding'           : '1.0.0-alpha02',
-                  'junit'                 : '4.13',
-                  'truth'                 : '1.0.1']
+                  'threetenbp'            : '1.5.0',
+                  'flowbinding'           : '1.0.0-beta02',
+                  'junit'                 : '4.13.1',
+                  'truth'                 : '1.1']
 
   repositories {
     google()
