--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
   ext.versions = ['compile_sdk'           : 30,
                   'min_sdk'               : 23,
-                  'android_build_tools'   : '30.0.2',
-                  'android_gradle_plugin' : '4.1.1',
+                  'android_gradle_plugin' : '7.0.0-alpha04',
                   'kotlin'                : '1.4.21',
                   'coroutines'            : '1.4.2',
+                  'compose'               : '1.0.0-alpha09',
                   'appcompat'             : '1.3.0-alpha02',
-                  'material'              : '1.3.0-alpha04',
+                  'material'              : '1.3.0-alpha03',
                   'androidx_core'         : '1.3.2',
                   'constraintlayout'      : '2.0.4',
                   'conductor'             : '3.0.0',
@@ -18,11 +18,10 @@ buildscript {
                   'okhttp'                : '4.10.0-RC1',
                   'retrofit'              : '2.9.0',
                   'play_services_location': '17.1.0',
-                  'play_publisher'        : '3.2.0',
+                  'play_publisher'        : '2.6.1',
                   'threetenbp'            : '1.5.0',
                   'flowbinding'           : '1.0.0-beta02',
                   'junit'                 : '4.13.1',
-                  'turbine'               : '0.3.0',
                   'truth'                 : '1.1']
 
   repositories {
