--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,7 @@ dependencies {
   implementation "androidx.compose.ui:ui:${versions.compose}"
   implementation "androidx.compose.material:material:${versions.compose}"
   implementation "androidx.compose.ui:ui-tooling:${versions.compose}"
+  implementation "dev.chrisbanes.accompanist:accompanist-insets:${versions.accompanist}"
   implementation "androidx.appcompat:appcompat:${versions.appcompat}"
   implementation "androidx.core:core-ktx:${versions.androidx_core}"
   implementation "com.google.android.material:material:${versions.material}"
