Migrate to Turbine and remove BroadcastChannel

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,9 +91,11 @@ play {
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.AbstractKotlinCompile).all {
-  kotlinOptions.freeCompilerArgs += ["-Xopt-in=kotlin.Experimental",
-                                     "-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi",
-                                     "-Xopt-in=kotlin.time.ExperimentalTime"]
+  kotlinOptions.freeCompilerArgs += ['-Xopt-in=kotlin.Experimental',
+                                     '-Xopt-in=kotlinx.coroutines.FlowPreview',
+                                     '-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi',
+                                     '-Xopt-in=kotlin.ExperimentalStdlibApi',
+                                     '-Xopt-in=kotlin.time.ExperimentalTime']
 }
 
 dependencies {
