Migrate to Compose beta 1

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,11 +118,13 @@ dependencies {
   implementation "androidx.compose.material:material-icons-extended:${versions.compose}"
   implementation "androidx.compose.ui:ui-tooling:${versions.compose}"
   implementation "androidx.compose.ui:ui-graphics:${versions.compose}"
+  implementation "androidx.constraintlayout:constraintlayout-compose:${versions.constraintlayout_compose}"
   implementation "dev.chrisbanes.accompanist:accompanist-insets:${versions.accompanist}"
   implementation "androidx.navigation:navigation-compose:${versions.navigation}"
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}"
   implementation "androidx.appcompat:appcompat:${versions.appcompat}"
   implementation "androidx.core:core-ktx:${versions.androidx_core}"
+  implementation "androidx.activity:activity-compose:${versions.androidx_activity}"
   implementation "com.google.android.material:material:${versions.material}"
   implementation "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}"
   implementation "com.bluelinelabs:conductor:${versions.conductor}"
