--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,34 @@
 buildscript {
-  ext.versions = ['compile_sdk'           : 30,
-                  'min_sdk'               : 23,
-                  'android_gradle_plugin' : '7.0.0-alpha05',
-                  'kotlin'                : '1.4.21-2',
-                  'coroutines'            : '1.4.2',
-                  'compose'               : '1.0.0-alpha11',
-                  'accompanist'           : '0.5.0',
-                  'navigation'            : '1.0.0-alpha05',
-                  'appcompat'             : '1.3.0-alpha02',
-                  'material'              : '1.3.0-alpha04',
-                  'androidx_core'         : '1.3.2',
-                  'lifecycle'             : '2.3.0-rc01',
-                  'constraintlayout'      : '2.0.4',
-                  'conductor'             : '3.0.0',
-                  'threetenabp'           : '1.3.0',
-                  'debugdrawer'           : '0.9.7',
-                  'timber'                : '4.7.1',
-                  'leakcanary'            : '2.1',
-                  'moshi'                 : '1.11.0',
-                  'okhttp'                : '4.10.0-RC1',
-                  'retrofit'              : '2.9.0',
-                  'play_services_location': '17.1.0',
-                  'play_publisher'        : '3.2.0-agp4.2-2',
-                  'threetenbp'            : '1.5.0',
-                  'flowbinding'           : '1.0.0-beta02',
-                  'junit'                 : '4.13.1',
-                  'turbine'               : '0.3.0',
-                  'truth'                 : '1.1']
+  ext.versions = ['compile_sdk'             : 30,
+                  'min_sdk'                 : 23,
+                  'android_gradle_plugin'   : '7.0.0-alpha08',
+                  'kotlin'                  : '1.4.30',
+                  'coroutines'              : '1.4.2',
+                  'compose'                 : '1.0.0-beta01',
+                  'accompanist'             : '0.6.0',
+                  'navigation'              : '1.0.0-alpha08',
+                  'appcompat'               : '1.3.0-alpha02',
+                  'material'                : '1.3.0',
+                  'androidx_core'           : '1.3.2',
+                  'androidx_activity'       : '1.3.0-alpha03',
+                  'lifecycle'               : '2.3.0-rc01',
+                  'constraintlayout'        : '2.0.4',
+                  'constraintlayout_compose': '1.0.0-alpha03',
+                  'conductor'               : '3.0.0',
+                  'threetenabp'             : '1.3.0',
+                  'debugdrawer'             : '0.9.7',
+                  'timber'                  : '4.7.1',
+                  'leakcanary'              : '2.1',
+                  'moshi'                   : '1.11.0',
+                  'okhttp'                  : '4.10.0-RC1',
+                  'retrofit'                : '2.9.0',
+                  'play_services_location'  : '18.0.0',
+                  'play_publisher'          : '3.2.0-agp4.2-2',
+                  'threetenbp'              : '1.5.0',
+                  'flowbinding'             : '1.0.0-beta02',
+                  'junit'                   : '4.13.1',
+                  'turbine'                 : '0.3.0',
+                  'truth'                   : '1.1']
 
   repositories {
     google()
