--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 buildscript {
   ext.versions = ['compile_sdk'             : 30,
                   'min_sdk'                 : 23,
-                  'android_gradle_plugin'   : '7.0.0-alpha09',
-                  'kotlin'                  : '1.4.30',
-                  'coroutines'              : '1.4.2',
-                  'compose'                 : '1.0.0-beta01',
-                  'accompanist'             : '0.6.0',
-                  'navigation'              : '1.0.0-alpha08',
-                  'appcompat'               : '1.3.0-alpha02',
+                  'android_gradle_plugin'   : '7.0.0-alpha10',
+                  'kotlin'                  : '1.4.31',
+                  'coroutines'              : '1.4.3',
+                  'compose'                 : '1.0.0-beta02',
+                  'accompanist'             : '0.6.2',
+                  'navigation'              : '1.0.0-alpha09',
+                  'appcompat'               : '1.3.0-beta01',
                   'material'                : '1.3.0',
                   'androidx_core'           : '1.3.2',
-                  'androidx_activity'       : '1.3.0-alpha03',
-                  'lifecycle'               : '2.3.0-rc01',
+                  'androidx_activity'       : '1.3.0-alpha04',
+                  'lifecycle'               : '2.3.0',
                   'constraintlayout'        : '2.0.4',
                   'constraintlayout_compose': '1.0.0-alpha03',
                   'conductor'               : '3.0.0',
