--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
                   'material'                : '1.3.0',
                   'androidx_core'           : '1.3.2',
                   'androidx_activity'       : '1.3.0-alpha04',
+                  'datastore'               : '1.0.0-alpha08',
                   'lifecycle'               : '2.3.0',
                   'constraintlayout'        : '2.0.4',
                   'conductor'               : '3.0.0',
