--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,15 @@ buildscript {
                   'android_gradle_plugin'   : '7.0.0-alpha12',
                   'kotlin'                  : '1.4.31',
                   'coroutines'              : '1.4.3',
-                  'compose'                 : '1.0.0-beta02',
+                  'compose'                 : '1.0.0-beta03',
                   'accompanist'             : '0.6.2',
                   'navigation'              : '1.0.0-alpha09',
-                  'appcompat'               : '1.3.0-beta01',
+                  'appcompat'               : '1.3.0-rc01',
                   'material'                : '1.3.0',
                   'androidx_core'           : '1.3.2',
-                  'androidx_activity'       : '1.3.0-alpha04',
+                  'androidx_activity'       : '1.3.0-alpha05',
                   'datastore'               : '1.0.0-alpha08',
-                  'lifecycle'               : '2.3.0',
+                  'lifecycle'               : '2.3.1',
                   'constraintlayout'        : '2.0.4',
                   'conductor'               : '3.0.0',
                   'threetenabp'             : '1.3.0',
