Add basic debug drawer to compose activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,6 +126,7 @@ dependencies {
   implementation "androidx.activity:activity-compose:${versions.androidx_activity}"
   implementation "com.google.android.material:material:${versions.material}"
   implementation "androidx.datastore:datastore:${versions.datastore}"
+  debugImplementation "androidx.datastore:datastore-preferences:${versions.datastore}"
   implementation "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}"
   implementation "com.bluelinelabs:conductor:${versions.conductor}"
   implementation "com.bluelinelabs:conductor-androidx-transition:${versions.conductor}"
@@ -147,6 +148,8 @@ dependencies {
   debugImplementation "au.com.gridstone.debugdrawer:debugdrawer-timber:${versions.debugdrawer}"
   debugImplementation "au.com.gridstone.debugdrawer:debugdrawer-retrofit:${versions.debugdrawer}"
   debugImplementation "au.com.gridstone.debugdrawer:debugdrawer-okhttp-logger:${versions.debugdrawer}"
+  debugImplementation "com.github.alorma:drawer-base:${versions.compose_debugdrawer}"
+  debugImplementation "com.github.alorma:drawer-modules:${versions.compose_debugdrawer}"
   testImplementation "org.threeten:threetenbp:${versions.threetenbp}"
   testImplementation "junit:junit:${versions.junit}"
   testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}"
