--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
                   'conductor'               : '3.0.0',
                   'threetenabp'             : '1.3.0',
                   'debugdrawer'             : '0.9.7',
+                  'compose_debugdrawer'     : '0.5.0',
                   'timber'                  : '4.7.1',
                   'leakcanary'              : '2.1',
                   'moshi'                   : '1.11.0',
