--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,7 +113,7 @@ dependencies {
   implementation "androidx.compose.material:material-icons-extended:${versions.compose}"
   implementation "androidx.compose.ui:ui-tooling:${versions.compose}"
   implementation "androidx.compose.ui:ui-graphics:${versions.compose}"
-  implementation "dev.chrisbanes.accompanist:accompanist-insets:${versions.accompanist}"
+  implementation "com.google.accompanist:accompanist-insets:${versions.accompanist}"
   implementation "androidx.navigation:navigation-compose:${versions.navigation}"
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}"
   implementation "androidx.appcompat:appcompat:${versions.appcompat}"
