--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
   ext.versions = ['compile_sdk'             : 30,
                   'min_sdk'                 : 23,
-                  'android_gradle_plugin'   : '7.0.0-alpha14',
-                  'kotlin'                  : '1.4.32',
+                  'android_gradle_plugin'   : '7.0.0-alpha15',
+                  'kotlin'                  : '1.4.30',
                   'coroutines'              : '1.4.3',
                   'compose'                 : '1.0.0-beta05',
                   'accompanist'             : '0.7.1',
@@ -10,8 +10,8 @@ buildscript {
                   'appcompat'               : '1.3.0-rc01',
                   'material'                : '1.3.0',
                   'androidx_core'           : '1.3.2',
-                  'androidx_activity'       : '1.3.0-alpha06',
-                  'datastore'               : '1.0.0-alpha08',
+                  'androidx_activity'       : '1.3.0-alpha07',
+                  'datastore'               : '1.0.0-beta01',
                   'lifecycle'               : '2.3.1',
                   'constraintlayout'        : '2.0.4',
                   'conductor'               : '3.0.0',
