お前はもう死んでいる

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ buildscript {
 
   repositories {
     google()
-    jcenter()
+    mavenCentral()
     maven { url "https://plugins.gradle.org/m2/" }
   }
 
@@ -48,7 +48,7 @@ buildscript {
 allprojects {
   repositories {
     google()
-    jcenter()
+    mavenCentral()
     maven { url 'https://jitpack.io' }
   }
 }
