--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
                   'compose'                 : '1.0.0-beta07',
                   'accompanist'             : '0.10.0',
                   'navigation'              : '2.4.0-alpha01',
-                  'appcompat'               : '1.3.0-rc01',
+                  'appcompat'               : '1.3.0',
                   'material'                : '1.3.0',
                   'androidx_core'           : '1.3.2',
                   'androidx_activity'       : '1.3.0-alpha08',
@@ -19,7 +19,7 @@ buildscript {
                   'debugdrawer'             : '0.9.7',
                   'compose_debugdrawer'     : '0.11.0',
                   'timber'                  : '4.7.1',
-                  'leakcanary'              : '2.1',
+                  'leakcanary'              : '2.7',
                   'moshi'                   : '1.11.0',
                   'okhttp'                  : '4.10.0-RC1',
                   'retrofit'                : '2.9.0',
