Migrate to Compose

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,12 +119,8 @@ dependencies {
   implementation "androidx.appcompat:appcompat:${versions.appcompat}"
   implementation "androidx.core:core-ktx:${versions.androidx_core}"
   implementation "androidx.activity:activity-compose:${versions.androidx_activity}"
-  implementation "com.google.android.material:material:${versions.material}"
   implementation "androidx.datastore:datastore:${versions.datastore}"
   debugImplementation "androidx.datastore:datastore-preferences:${versions.datastore}"
-  implementation "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}"
-  implementation "com.bluelinelabs:conductor:${versions.conductor}"
-  implementation "com.bluelinelabs:conductor-androidx-transition:${versions.conductor}"
   implementation "com.jakewharton.timber:timber:${versions.timber}"
   implementation "com.jakewharton.threetenabp:threetenabp:${versions.threetenabp}"
   implementation "com.squareup.leakcanary:leakcanary-object-watcher-android:${versions.leakcanary}"
@@ -132,20 +128,14 @@ dependencies {
   implementation "com.squareup.moshi:moshi:${versions.moshi}"
   implementation "com.squareup.moshi:moshi-kotlin:${versions.moshi}"
   implementation "com.squareup.okhttp3:okhttp:${versions.okhttp}"
+  debugImplementation "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}"
   implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
   debugImplementation "com.squareup.retrofit2:retrofit-mock:${versions.retrofit}"
   implementation "com.squareup.retrofit2:converter-moshi:${versions.retrofit}"
-  implementation "io.github.reactivecircus.flowbinding:flowbinding-android:${versions.flowbinding}"
-  implementation "io.github.reactivecircus.flowbinding:flowbinding-appcompat:${versions.flowbinding}"
   implementation "com.google.android.gms:play-services-location:${versions.play_services_location}"
   debugImplementation "com.jakewharton:process-phoenix:${versions.process_phoenix}"
-  debugImplementation "au.com.gridstone.debugdrawer:debugdrawer:${versions.debugdrawer}"
-  debugImplementation "au.com.gridstone.debugdrawer:debugdrawer-leakcanary:${versions.debugdrawer}"
-  debugImplementation "au.com.gridstone.debugdrawer:debugdrawer-timber:${versions.debugdrawer}"
-  debugImplementation "au.com.gridstone.debugdrawer:debugdrawer-retrofit:${versions.debugdrawer}"
-  debugImplementation "au.com.gridstone.debugdrawer:debugdrawer-okhttp-logger:${versions.debugdrawer}"
-  debugImplementation "com.github.alorma:drawer-base:${versions.compose_debugdrawer}"
-  debugImplementation "com.github.alorma:drawer-modules:${versions.compose_debugdrawer}"
+  debugImplementation "com.github.alorma:drawer-base:${versions.debugdrawer}"
+  debugImplementation "com.github.alorma:drawer-modules:${versions.debugdrawer}"
   testImplementation "org.threeten:threetenbp:${versions.threetenbp}"
   testImplementation "junit:junit:${versions.junit}"
   testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}"
