--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ android {
   }
 
   compileOptions {
+    coreLibraryDesugaringEnabled true
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
   }
@@ -122,7 +123,6 @@ dependencies {
   implementation "androidx.datastore:datastore:${versions.datastore}"
   debugImplementation "androidx.datastore:datastore-preferences:${versions.datastore}"
   implementation "com.jakewharton.timber:timber:${versions.timber}"
-  implementation "com.jakewharton.threetenabp:threetenabp:${versions.threetenabp}"
   implementation "com.squareup.leakcanary:leakcanary-object-watcher-android:${versions.leakcanary}"
   debugImplementation "com.squareup.leakcanary:leakcanary-android:${versions.leakcanary}"
   implementation "com.squareup.moshi:moshi:${versions.moshi}"
@@ -135,9 +135,9 @@ dependencies {
   implementation "com.google.android.gms:play-services-location:${versions.play_services_location}"
   debugImplementation "com.github.alorma:drawer-base:${versions.debugdrawer}"
   debugImplementation "com.github.alorma:drawer-modules:${versions.debugdrawer}"
-  testImplementation "org.threeten:threetenbp:${versions.threetenbp}"
   testImplementation "junit:junit:${versions.junit}"
   testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}"
   testImplementation "app.cash.turbine:turbine:${versions.turbine}"
   testImplementation "com.google.truth:truth:${versions.truth}"
+  coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${versions.jdk_desugar}"
 }
