--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,29 @@
 buildscript {
-  ext.versions = ['compile_sdk'             : 30,
-                  'min_sdk'                 : 23,
-                  'android_gradle_plugin'   : '7.1.0-alpha01',
-                  'kotlin'                  : '1.4.32',
-                  'coroutines'              : '1.4.3',
-                  'compose'                 : '1.0.0-beta07',
-                  'accompanist'             : '0.10.0',
-                  'navigation'              : '2.4.0-alpha01',
-                  'appcompat'               : '1.3.0',
-                  'androidx_core'           : '1.3.2',
-                  'androidx_activity'       : '1.3.0-alpha08',
-                  'datastore'               : '1.0.0-beta01',
-                  'lifecycle'               : '2.3.1',
-                  'threetenabp'             : '1.3.0',
-                  'debugdrawer'             : '0.11.0',
-                  'timber'                  : '4.7.1',
-                  'leakcanary'              : '2.7',
-                  'moshi'                   : '1.11.0',
-                  'okhttp'                  : '4.10.0-RC1',
-                  'retrofit'                : '2.9.0',
-                  'play_services_location'  : '18.0.0',
-                  'play_publisher'          : '3.2.0-agp4.2-2',
-                  'threetenbp'              : '1.5.0',
-                  'junit'                   : '4.13.1',
-                  'turbine'                 : '0.4.1',
-                  'truth'                   : '1.1']
+  ext.versions = ['compile_sdk'           : 30,
+                  'min_sdk'               : 23,
+                  'android_gradle_plugin' : '7.1.0-alpha01',
+                  'kotlin'                : '1.4.32',
+                  'coroutines'            : '1.4.3',
+                  'compose'               : '1.0.0-beta07',
+                  'accompanist'           : '0.10.0',
+                  'navigation'            : '2.4.0-alpha01',
+                  'appcompat'             : '1.3.0',
+                  'androidx_core'         : '1.3.2',
+                  'androidx_activity'     : '1.3.0-alpha08',
+                  'datastore'             : '1.0.0-beta01',
+                  'lifecycle'             : '2.3.1',
+                  'debugdrawer'           : '0.11.0',
+                  'timber'                : '4.7.1',
+                  'leakcanary'            : '2.7',
+                  'moshi'                 : '1.11.0',
+                  'okhttp'                : '4.10.0-RC1',
+                  'retrofit'              : '2.9.0',
+                  'play_services_location': '18.0.0',
+                  'play_publisher'        : '3.2.0-agp4.2-2',
+                  'junit'                 : '4.13.1',
+                  'turbine'               : '0.4.1',
+                  'truth'                 : '1.1',
+                  'jdk_desugar'           : '1.1.5']
 
   repositories {
     google()
