--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,12 +2,12 @@ name: Release
 
 on:
   push:
-    branches:
-      - 'release/**'
+    tags:
+      - '*.*.*'
 
 jobs:
   deploy:
-    name: Publish to Play
+    name: Publish release
     runs-on: ubuntu-latest
 
     steps:
@@ -36,3 +36,17 @@ jobs:
 
       - name: Update store listing
         run: bash ./gradlew publishListing
+
+      - name: Build APKs
+        run: bash ./gradlew assemble
+
+      - name: Create tag
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          draft: true
+          files: |
+            app/build/outputs/apk/release/app-release.apk
+            app/build/outputs/apk/debug/app-debug.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
