--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,15 @@ buildscript {
                   'android_gradle_plugin': '7.1.0-alpha02',
                   'kotlin'               : '1.5.10',
                   'coroutines'           : '1.5.0',
-                  'compose'              : '1.0.0-beta09',
-                  'accompanist'          : '0.11.1',
-                  'navigation'           : '2.4.0-alpha02',
+                  'compose'              : '1.0.0-rc01',
+                  'accompanist'          : '0.13.0',
+                  'navigation'           : '2.4.0-alpha04',
                   'appcompat'            : '1.3.0',
-                  'androidx_core'        : '1.5.0',
-                  'androidx_activity'    : '1.3.0-alpha08',
-                  'datastore'            : '1.0.0-beta01',
+                  'androidx_core'        : '1.6.0',
+                  'androidx_activity'    : '1.3.0-rc01',
+                  'datastore'            : '1.0.0-rc01',
                   'lifecycle'            : '2.3.1',
-                  'debugdrawer'          : '0.14.0',
+                  'debugdrawer'          : '0.15.0',
                   'timber'               : '4.7.1',
                   'leakcanary'           : '2.7',
                   'moshi'                : '1.12.0',
