--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
 
     </activity>
 
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="${googleMapsKey}"
+        />
+
   </application>
 
 </manifest>
