--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,18 @@
 buildscript {
   ext.versions = ['compile_sdk'          : 30,
-                  'min_sdk'              : 23,
-                  'android_gradle_plugin': '7.1.0-alpha02',
-                  'kotlin'               : '1.5.10',
-                  'coroutines'           : '1.5.0',
-                  'compose'              : '1.0.0-rc01',
-                  'accompanist'          : '0.13.0',
-                  'navigation'           : '2.4.0-alpha04',
-                  'appcompat'            : '1.3.0',
+                  'min_sdk'              : 24,
+                  'android_gradle_plugin': '7.0.0',
+                  'kotlin'               : '1.5.21',
+                  'coroutines'           : '1.5.1',
+                  'compose'              : '1.0.1',
+                  'accompanist'          : '0.16.0',
+                  'navigation'           : '2.4.0-alpha05',
+                  'appcompat'            : '1.3.1',
                   'androidx_core'        : '1.6.0',
-                  'androidx_activity'    : '1.3.0-rc01',
-                  'datastore'            : '1.0.0-rc01',
+                  'androidx_activity'    : '1.3.0-rc02',
+                  'datastore'            : '1.0.0-rc02',
                   'lifecycle'            : '2.3.1',
-                  'debugdrawer'          : '0.15.0',
+                  'debugdrawer'          : '0.19.0',
                   'timber'               : '4.7.1',
                   'leakcanary'           : '2.7',
                   'moshi'                : '1.12.0',
