--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,10 @@ buildscript {
                   'coroutines'           : '1.5.1',
                   'compose'              : '1.0.1',
                   'accompanist'          : '0.16.0',
-                  'navigation'           : '2.4.0-alpha05',
+                  'navigation'           : '2.4.0-alpha06',
                   'appcompat'            : '1.3.1',
                   'androidx_core'        : '1.6.0',
-                  'androidx_activity'    : '1.3.0-rc02',
+                  'androidx_activity'    : '1.3.1',
                   'datastore'            : '1.0.0-rc02',
                   'lifecycle'            : '2.3.1',
                   'debugdrawer'          : '0.19.0',
@@ -23,7 +23,7 @@ buildscript {
                   'volley'               : '1.2.0', // Google Maps needs this 😔
                   'play_publisher'       : '3.4.0-agp7.0',
                   'junit'                : '4.13.2',
-                  'turbine'              : '0.5.2',
+                  'turbine'              : '0.6.0',
                   'truth'                : '1.1.3',
                   'jdk_desugar'          : '1.1.5']
 
