--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
   ext.versions = ['compile_sdk'          : 30,
                   'min_sdk'              : 24,
-                  'android_gradle_plugin': '7.0.0',
+                  'android_gradle_plugin': '7.0.1',
                   'kotlin'               : '1.5.21',
                   'coroutines'           : '1.5.1',
                   'compose'              : '1.0.1',
@@ -10,7 +10,7 @@ buildscript {
                   'appcompat'            : '1.3.1',
                   'androidx_core'        : '1.6.0',
                   'androidx_activity'    : '1.3.1',
-                  'datastore'            : '1.0.0-rc02',
+                  'datastore'            : '1.0.0',
                   'lifecycle'            : '2.3.1',
                   'debugdrawer'          : '0.19.0',
                   'timber'               : '4.7.1',
