--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
     <activity
         android:name=".MainActivity"
         android:windowSoftInputMode="adjustResize"
+        android:exported="true"
         >
 
       <intent-filter>
