Add a blank widget

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,7 @@ dependencies {
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}"
   implementation "androidx.appcompat:appcompat:${versions.appcompat}"
   implementation "org.osmdroid:osmdroid-android:${versions.osmdroid}"
+  implementation "androidx.glance:glance-appwidget:${versions.glance}"
   implementation "androidx.core:core-ktx:${versions.androidx_core}"
   implementation "androidx.activity:activity-compose:${versions.androidx_activity}"
   implementation "androidx.datastore:datastore:${versions.datastore}"
