--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,22 @@
 
     </activity>
 
+    <receiver
+        android:name=".widget.ForecastWidgetReceiver"
+        android:exported="false"
+        >
+
+      <intent-filter>
+        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+      </intent-filter>
+
+      <meta-data
+          android:name="android.appwidget.provider"
+          android:resource="@xml/forecast_widget"
+          />
+
+    </receiver>
+
   </application>
 
 </manifest>
