--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,32 @@
 buildscript {
-  ext.versions = ['compile_sdk'          : 31,
-                  'min_sdk'              : 24,
-                  'android_gradle_plugin': '7.0.3',
-                  'kotlin'               : '1.5.31',
-                  'coroutines'           : '1.5.2',
-                  'compose'              : '1.0.5',
-                  'accompanist'          : '0.20.2',
-                  'navigation'           : '2.4.0-alpha06',
-                  'appcompat'            : '1.3.1',
-                  'androidx_core'        : '1.7.0',
-                  'androidx_activity'    : '1.4.0',
-                  'datastore'            : '1.0.0',
-                  'lifecycle'            : '2.3.1',
-                  'debugdrawer'          : '0.19.0',
-                  'timber'               : '4.7.1',
-                  'leakcanary'           : '2.7',
-                  'moshi'                : '1.12.0',
-                  'okhttp'               : '4.10.0-RC1',
-                  'retrofit'             : '2.9.0',
-                  'osmdroid'             : '6.1.10',
-                  'play_publisher'       : '3.4.0-agp7.0',
-                  'junit'                : '4.13.2',
-                  'turbine'              : '0.7.0',
-                  'truth'                : '1.1.3',
-                  'jdk_desugar'          : '1.1.5']
+  ext.versions = [
+      'compile_sdk'          : 31,
+      'min_sdk'              : 24,
+      'android_gradle_plugin': '7.0.3',
+      'kotlin'               : '1.5.31',
+      'coroutines'           : '1.5.2',
+      'compose'              : '1.0.5',
+      'accompanist'          : '0.20.2',
+      'navigation'           : '2.4.0-alpha06',
+      'appcompat'            : '1.3.1',
+      'androidx_core'        : '1.7.0',
+      'androidx_activity'    : '1.4.0',
+      'datastore'            : '1.0.0',
+      'lifecycle'            : '2.3.1',
+      'debugdrawer'          : '0.19.0',
+      'timber'               : '4.7.1',
+      'leakcanary'           : '2.7',
+      'moshi'                : '1.12.0',
+      'okhttp'               : '4.10.0-RC1',
+      'retrofit'             : '2.9.0',
+      'osmdroid'             : '6.1.10',
+      'play_publisher'       : '3.4.0-agp7.0',
+      'junit'                : '4.13.2',
+      'turbine'              : '0.7.0',
+      'truth'                : '1.1.3',
+      'jdk_desugar'          : '1.1.5',
+      'glance'               : '1.0.0-alpha01',
+  ]
 
   repositories {
     google()
