--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
   ext.versions = [
       'compile_sdk'          : 31,
       'min_sdk'              : 24,
-      'android_gradle_plugin': '7.0.4',
+      'android_gradle_plugin': '7.1.0',
       'kotlin'               : '1.5.31',
       'coroutines'           : '1.5.2',
       'compose'              : '1.0.5',
@@ -20,7 +20,7 @@ buildscript {
       'okhttp'               : '4.10.0-RC1',
       'retrofit'             : '2.9.0',
       'osmdroid'             : '6.1.10',
-      'play_publisher'       : '3.4.0-agp7.0',
+      'play_publisher'       : '3.7.0',
       'junit'                : '4.13.2',
       'turbine'              : '0.7.0',
       'truth'                : '1.1.3',
