--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
       'truth'                : '1.1.3',
       'jdk_desugar'          : '1.1.5',
       'glance'               : '1.0.0-alpha02',
+      'test_param_injector'  : '1.8',
   ]
 
   repositories {
