--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,5 @@
 buildscript {
-  ext.versions = [
-      'compile_sdk'          : 31,
-      'min_sdk'              : 24,
-      'android_gradle_plugin': '7.1.1',
-      'kotlin'               : '1.6.10',
-      'coroutines'           : '1.6.0',
-      'compose'              : '1.1.0',
-      'accompanist'          : '0.23.0',
-      'navigation'           : '2.4.1',
-      'appcompat'            : '1.4.1',
-      'androidx_core'        : '1.7.0',
-      'androidx_activity'    : '1.4.0',
-      'datastore'            : '1.0.0',
-      'lifecycle'            : '2.4.1',
-      'debugdrawer'          : '0.23.0',
-      'timber'               : '4.7.1',
-      'leakcanary'           : '2.8.1',
-      'moshi'                : '1.12.0',
-      'okhttp'               : '4.10.0-RC1',
-      'retrofit'             : '2.9.0',
-      'osmdroid'             : '6.1.10',
-      'play_publisher'       : '3.7.0',
-      'junit'                : '4.13.2',
-      'turbine'              : '0.7.0',
-      'truth'                : '1.1.3',
-      'jdk_desugar'          : '1.1.5',
-      'glance'               : '1.0.0-alpha02',
-      'test_param_injector'  : '1.8',
-  ]
+  apply from: 'gradle/dependencies.gradle'
 
   repositories {
     google()
@@ -36,9 +8,9 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:${versions.android_gradle_plugin}"
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
-    classpath "com.github.triplet.gradle:play-publisher:${versions.play_publisher}"
+    classpath deps.androidGradlePlugin
+    classpath deps.kotlin.gradlePlugin
+    classpath deps.playPublisher
   }
 }
 
