--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
   dependencies {
     classpath deps.androidGradlePlugin
     classpath deps.kotlin.gradlePlugin
+    classpath deps.molecule.gradlePlugin
     classpath deps.playPublisher
   }
 }
