--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -17,6 +17,7 @@ buildscript {
     'kotlin': '1.6.10',
     'leakcanary': '2.8.1',
     'lifecycle': '2.4.1',
+    'molecule': '0.2.0',
     'moshi': '1.12.0',
     'navigation': '2.4.1',
     'okhttp': '4.10.0-RC1',
@@ -27,6 +28,7 @@ buildscript {
     'timber': '4.7.1',
     'truth': '1.1.3',
     'turbine': '0.7.0',
+    'voyager': '1.0.0-beta15',
   ]
   ext.deps = [
     'accompanist': [
@@ -73,6 +75,10 @@ buildscript {
       'objectWatcher': "com.squareup.leakcanary:leakcanary-object-watcher-android:${versions.leakcanary}",
     ],
     'lifecycle': "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}",
+    'molecule': [
+      'gradlePlugin': "app.cash.molecule:molecule-gradle-plugin:${versions.molecule}",
+      'testing': "app.cash.molecule:molecule-testing:${versions.molecule}",
+    ],
     'moshi': [
       'core': "com.squareup.moshi:moshi:${versions.moshi}",
       'kotlin': "com.squareup.moshi:moshi-kotlin:${versions.moshi}",
@@ -94,5 +100,6 @@ buildscript {
     'timber': "com.jakewharton.timber:timber:${versions.timber}",
     'truth': "com.google.truth:truth:${versions.truth}",
     'turbine': "app.cash.turbine:turbine:${versions.turbine}",
+    'voyager': "cafe.adriel.voyager:voyager-navigator:${versions.voyager}",
   ]
 }
