--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,13 @@
 
     </receiver>
 
+    <!-- Opt out of App Startup features. -->
+    <provider
+        android:name="androidx.startup.InitializationProvider"
+        android:authorities="${applicationId}.androidx-startup"
+        tools:node="remove"
+        />
+
   </application>
 
 </manifest>
