--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -27,6 +27,7 @@ buildscript {
     'truth': '1.1.3',
     'turbine': '0.7.0',
     'voyager': '1.0.0-beta16',
+    'workManager' : '2.7.1',
   ]
   ext.deps = [
     'accompanist': [
@@ -37,6 +38,7 @@ buildscript {
     'androidx': [
       'core': "androidx.core:core-ktx:${versions.androidxCore}",
       'activityCompose': "androidx.activity:activity-compose:${versions.androidxActivity}",
+      'workManager': "androidx.work:work-runtime-ktx:${versions.workManager}",
     ],
     'compose': [
       'material': [
