Fix widget spawning duplicate activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         android:name=".MainActivity"
         android:windowSoftInputMode="adjustResize"
         android:exported="true"
+        android:launchMode="singleTop"
         >
 
       <intent-filter>
