--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
   dependencies {
     classpath deps.androidGradlePlugin
     classpath deps.kotlin.gradlePlugin
-    classpath deps.molecule.gradlePlugin
+    classpath deps.molecule
     classpath deps.playPublisher
   }
 }
