--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -2,21 +2,21 @@ buildscript {
   ext.versions = [
     'compileSdk': 32,
     'minSdk': 24,
-    'accompanist': '0.23.1',
-    'androidGradlePlugin': '7.2.1',
+    'accompanist': '0.25.1',
+    'androidGradlePlugin': '7.2.2',
     'androidxActivity': '1.4.0',
     'androidxCore': '1.8.0',
-    'compose': '1.1.1',
+    'compose': '1.2.1',
     'coroutines': '1.6.2',
     'datastore': '1.0.0',
     'debugdrawer': '0.23.0',
     'glance': '1.0.0-alpha03',
     'jdkDesugar': '1.1.5',
     'junit': '4.13.2',
-    'kotlin': '1.6.10',
+    'kotlin': '1.7.10',
     'leakcanary': '2.9.1',
     'lifecycle': '2.4.1',
-    'molecule': '0.2.0',
+    'molecule': '0.4.0',
     'moshi': '1.13.0',
     'okhttp': '4.10.0',
     'osmdroid': '6.1.13',
@@ -25,7 +25,7 @@ buildscript {
     'testParameterInjector': '1.8',
     'timber': '4.7.1',
     'truth': '1.1.3',
-    'turbine': '0.8.0',
+    'turbine': '0.9.0',
     'voyager': '1.0.0-rc02',
     'workManager' : '2.7.1',
   ]
@@ -74,10 +74,7 @@ buildscript {
       'objectWatcher': "com.squareup.leakcanary:leakcanary-object-watcher-android:${versions.leakcanary}",
     ],
     'lifecycle': "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}",
-    'molecule': [
-      'gradlePlugin': "app.cash.molecule:molecule-gradle-plugin:${versions.molecule}",
-      'testing': "app.cash.molecule:molecule-testing:${versions.molecule}",
-    ],
+    'molecule' : "app.cash.molecule:molecule-gradle-plugin:${versions.molecule}",
     'moshi': [
       'core': "com.squareup.moshi:moshi:${versions.moshi}",
       'kotlin': "com.squareup.moshi:moshi-kotlin:${versions.moshi}",
