--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -6,7 +6,7 @@ buildscript {
     'androidGradlePlugin': '7.3.1',
     'androidxActivity': '1.6.1',
     'androidxCore': '1.9.0',
-    'compose': '1.3.0',
+    'composeBom': '2022.10.00',
     'coroutines': '1.6.4',
     'datastore': '1.0.0',
     'debugdrawer': '0.26.0',
@@ -42,14 +42,15 @@ buildscript {
     ],
     'compose': [
       'material': [
-        'core': "androidx.compose.material:material:${versions.compose}",
-        'icons': "androidx.compose.material:material-icons-core:${versions.compose}",
-        'iconsExtended': "androidx.compose.material:material-icons-extended:${versions.compose}",
+        'core': "androidx.compose.material:material",
+        'icons': "androidx.compose.material:material-icons-core",
+        'iconsExtended': "androidx.compose.material:material-icons-extended",
       ],
-      'ui': "androidx.compose.ui:ui:${versions.compose}",
-      'uiGraphics': "androidx.compose.ui:ui-graphics:${versions.compose}",
-      'uiTooling': "androidx.compose.ui:ui-tooling:${versions.compose}",
+      'ui': "androidx.compose.ui:ui",
+      'uiGraphics': "androidx.compose.ui:ui-graphics",
+      'uiTooling': "androidx.compose.ui:ui-tooling",
     ],
+    'composeBom': "androidx.compose:compose-bom:${versions.composeBom}",
     'coroutines': [
       'android': "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines}",
       'test': "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}",
