Opt in to predictive back gesture

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,21 @@
   <application
       android:name=".SocketWeatherApp"
       android:allowBackup="false"
+      android:enableOnBackInvokedCallback="true"
       android:fullBackupContent="false"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/appName"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="false"
       android:theme="@style/Theme.SocketWeather"
-      tools:ignore="GoogleAppIndexingWarning"
+      tools:ignore="GoogleAppIndexingWarning,UnusedAttribute"
       >
 
     <activity
         android:name=".MainActivity"
-        android:windowSoftInputMode="adjustResize"
         android:exported="true"
         android:launchMode="singleTop"
+        android:windowSoftInputMode="adjustResize"
         >
 
       <intent-filter>
