--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
       tools:ignore="GoogleAppIndexingWarning,UnusedAttribute"
       >
 
+    <profileable
+        android:shell="true"
+        tools:targetApi="29"
+        />
+
     <activity
         android:name=".MainActivity"
         android:exported="true"
