--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -5,7 +5,9 @@ buildscript {
     'accompanist': '0.25.1',
     'androidGradlePlugin': '7.3.1',
     'androidxActivity': '1.6.1',
+    'androidxJunitRunner': '1.1.4',
     'androidxCore': '1.9.0',
+    'benchmark': '1.1.1',
     'composeBom': '2022.10.00',
     'coroutines': '1.6.4',
     'datastore': '1.0.0',
@@ -21,11 +23,13 @@ buildscript {
     'okhttp': '4.10.0',
     'osmdroid': '6.1.13',
     'playPublisher': '3.7.0',
+    'profileInstaller': '1.2.0',
     'retrofit': '2.9.0',
     'testParameterInjector': '1.9',
     'timber': '4.7.1',
     'truth': '1.1.3',
     'turbine': '0.12.0',
+    'uiAutomator' : '2.2.0',
     'voyager': '1.0.0-rc03',
     'workManager' : '2.7.1',
   ]
@@ -37,6 +41,10 @@ buildscript {
     'androidx': [
       'core': "androidx.core:core-ktx:${versions.androidxCore}",
       'activityCompose': "androidx.activity:activity-compose:${versions.androidxActivity}",
+      'benchmarkJunit4': "androidx.benchmark:benchmark-macro-junit4:${versions.benchmark}",
+      'junitRunner': "androidx.test.ext:junit:${versions.androidxJunitRunner}",
+      'profileInstaller': "androidx.profileinstaller:profileinstaller:${versions.profileInstaller}",
+      'uiAutomator': "androidx.test.uiautomator:uiautomator:${versions.uiAutomator}",
       'workManager': "androidx.work:work-runtime-ktx:${versions.workManager}",
     ],
     'compose': [
