--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -49,7 +49,8 @@ buildscript {
     ],
     'compose': [
       'material': [
-        'core': "androidx.compose.material:material",
+        'm2' : "androidx.compose.material:material",
+        'core': "androidx.compose.material3:material3",
         'icons': "androidx.compose.material:material-icons-core",
         'iconsExtended': "androidx.compose.material:material-icons-extended",
       ],
